--- a/my-app/src/index.html
+++ b/my-app/src/index.html
@@ -3,34 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Template</title>
-
-    <!-- bootstrap css -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
-
-    <!-- don't use this in production: -->
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <!-- we will put our teact component inside this div -->
     <div id="root"></div>
-
-    <!-- load our react component.
-    <script src="context.js" defer type="text/babel"></script>
-    <script src="navbar.js" defer type="text/babel"></script>
-    <script src="createaccount.js" defer type="text/babel"></script>
-    <script src="login.js" defer type="text/babel"></script>
-    <script src="deposit.js" defer type="text/babel"></script>
-    <script src="DisplayAmountForm.js" defer type="text/babel"></script>
-    <script src="findCurrentAttribute.js" defer type="text/babel"></script>
-    <script src="handleTransaction.js" defer type="text/babel"></script>
-    <script src="withdraw.js" defer type="text/babel"></script>
-    <script src="balance.js" defer type="text/babel"></script>
-    <script src="alldata.js" defer type="text/babel"></script>
-    <script src="home.js" defer type="text/babel"></script>
-    <script src="index.js" defer type="text/babel"></script>
-	 	-->
   </body>
 </html>
